Cleaned up the warnings resulting from the upgrade of the JRE we are targeting.